[package]
name = "ytdl-mp3"
version = "4.0.0-beta.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
directories = "5"
log = "0.4"
neon = "1"
regex = "1.10"
rustube = "0.6.0"
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1.4.0", features = ["full"] }
